# LinprogSolver4Cpp

./: CMakeLists.txt  README.md  data.txt  linprog.cpp  main.cpp
include/: Parameters.h  Status.h  include_libs.h  linprog.h  problemData.h
